refactor: solving a bunch of JPA headaches and getting unit tests working.
+ I will try to tackle the table relationships first, making sure annotations are set properly.
+ in-mem H2 DB for now, but I might cut over to SQLlite after unit tests to double check the table data.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,7 @@
 #for JPA TEST
 #spring.session.jdbc.initialize-schema: always
+#spring.jpa.generate-ddl = true
+#spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
