--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 			<artifactId>spring-session-jdbc</artifactId>
 		</dependency>
 
-		<!-- non-boot security dependency -->
+		<!-- REF: non-boot security dependency -->
 		<!--<dependency>   <groupId>org.springframework.security</groupId>   <artifactId>spring-security-config</artifactId></dependency>-->
 
 		<dependency>
@@ -53,6 +53,14 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.opencsv</groupId>
+		    <artifactId>opencsv</artifactId>
+		    <version>5.8</version>
+		    <scope>compile</scope>
+		</dependency>
+		
+		<!-- TEST LIBS -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -70,22 +78,30 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-testcontainers</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- TEST ONLY, DECOUPLE FOR PROD -->
+		<!-- 	<dependency>		   <groupId>org.xerial</groupId>		   <artifactId>sqlite-jdbc</artifactId>	</dependency> -->
 		<dependency>
-		    <groupId>com.opencsv</groupId>
-		    <artifactId>opencsv</artifactId>
-		    <version>5.8</version>
-		    <scope>compile</scope>
+		    <groupId>org.hibernate.orm</groupId>
+		    <artifactId>hibernate-community-dialects</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <scope>runtime</scope>
 		</dependency>
 		
 	</dependencies>
