--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-#for JPA TEST
+debug=true
+server.servlet.context-path=/landwar
+server.port=9000
+
 #spring.session.jdbc.initialize-schema: always
 
 spring.datasource.url=jdbc:h2:mem:testdb
