large refactor: spent a very long time deep-diving the User/UnitInfo relationship.
+ Refactored table names, entity names, various columns, the BaseEntity object.
+ hashCode is cursed, yet we must use it.
+ the fallback plan was to decouple UnitInfo from User, and just store the traditional user_id val in UnitInfo table - still might do this if whatever I have working doesn't actually "work". This solution would mean a few more DB calls on the respective repositories, but again, it would work.
+ this committed solution appears to work in unit-ish testing, I've confirmed the queried User AFTER unit persist has the units, but I can't exactly say how this solution works. I fiddled the annotation, cascade, and fetch knobs for a few weeks, ugh.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ debug=true
 server.servlet.context-path=/landwar
 server.port=9000
 
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
+
 #spring.session.jdbc.initialize-schema: always
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -10,7 +13,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.session.jdbc.initialize-schema: always
