--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,13 +3,16 @@
 #spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto = update
 
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.session.jdbc.initialize-schema: always
