--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-debug=true
-server.servlet.context-path=/landwar
-server.port=9000
+#debug=true
+#server.servlet.context-path=/landwar
+#server.port=9000
 
-logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: ERROR
+spring.profiles.active=dev
+spring.http.encoding.charset=UTF-8
+spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
+#don't really touch these....
+#spring.mvc.static-path-pattern=/resources/**
+#spring.resources.add-mappings=true
+ 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
 #spring.session.jdbc.initialize-schema: always
 
@@ -17,3 +24,11 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.session.jdbc.initialize-schema: always
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=utf-8
