--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,8 +3,8 @@
 #spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: ERROR
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
