--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 	</properties>
 		
 	<dependencies>
+		
+		<!-- SPRING BOOT CORE -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -45,6 +47,7 @@
 		    <groupId>org.springframework.boot</groupId> 
 		    <artifactId>spring-boot-starter-validation</artifactId> 
 		</dependency>
+		<!-- ///////////////////////////////  -->
 
 		<!-- REF: non-boot security dependency -->
 		<!--<dependency>   <groupId>org.springframework.security</groupId>   <artifactId>spring-security-config</artifactId></dependency>-->
@@ -62,6 +65,31 @@
 		    <version>5.8</version>
 		    <scope>compile</scope>
 		</dependency>
+		
+		<!-- PDF to HTML features -->
+		<dependency>
+		    <groupId>org.w3c</groupId>
+		    <artifactId>dom</artifactId>
+		    <version>2.3.0-jaxb-1.0.6</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.13.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.openhtmltopdf</groupId>
+		    <artifactId>openhtmltopdf-core</artifactId>
+		    <version>1.0.6</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.openhtmltopdf</groupId>
+		    <artifactId>openhtmltopdf-pdfbox</artifactId>
+		    <version>1.0.6</version>
+		</dependency>
+		<!-- ///////////////////////////////  -->
+		
 		
 		<!-- TEST LIBS -->
 		<dependency>
