--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.session.jdbc.initialize-schema: always
 
 
-spring.thymeleaf.cache=false
+#flip cache to true for production
+spring.thymeleaf.cache=false	
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
